Archive2/7b/7e810380ed58fa/output
main.cpp: In function 'int main()':
main.cpp:15:14: error: cannot convert '<brace-enclosed initializer list>' to 'int' for argument '1' to 'void bar(int, int)'
    bar({1, 2});   // error: no matching function for call to 'bar'  <<< Why? <<<
              ^
